--- a/README
+++ b/README
@@ -1,1 +1,9 @@
 
+
+
+Installing
+
+cd /root/
+dnf -y install wget 
+wget -0 https://raw.githubusercontent.com/fumatchu/DaD/main/DC-Installer.sh
+chmod 700 ./DC-Installer.sh
