--- a/README
+++ b/README
@@ -1,7 +1,22 @@
 (quick) and Dirty active Directory (DaD)
 
+This is a script to allow a Rocky (RHEL) Server to become a an AD/DC Server from Samba Source. 
+Yes, there are others that build RPMS and you can probably find them (Not saying they are doing anything nefarious). 
+I took this approach because there is not one binary that this script modifies and therefore can be a trusted source (no pun intended). 
+It goes out to the internet and collects source from VALID locations to build Samba.
+The Script will do the following:
+  Disable SELINX
+  Disable firewalld
+  Enable the Rocky REPOS needed to build 
+    EPEL
+    CRB 
+    
 
-Installing
+
+
+
+
+####Installing
 
 cd /root/
 dnf -y install wget 
