--- a/README
+++ b/README
@@ -34,6 +34,7 @@ The Phase two installer will
     Provide you with a "next steps" for samba administration
 
 ####Sounds great! How do I get it?
+(Included is a Word document providing steo by step instructions-Installing and configuring Ad on Rocky-RADS)
 
 Installing
 (Just copy and paste the following lines on the Rocky terminal)
