--- a/README
+++ b/README
@@ -34,7 +34,7 @@ The Phase two installer will
     Provide you with a "next steps" for samba administration
 
 ####Sounds great! How do I get it?
-(Included is a Word document providing steP by step instructions-(See the File) Installing and configuring AD on Rocky-RADS)
+(Included is a Word document providing step by step instructions-(See the File) Installing and configuring AD on Rocky-RADS)
 
 Installing
 (Just copy and paste the following lines on the Rocky terminal)
