--- a/README
+++ b/README
@@ -38,3 +38,15 @@ Installing
 (Just copy and paste the following lines on the Rocky terminal)
 
 Please see the EASY_INSTALL File 
+
+#Installing
+#Install Rocky Minimal
+#Make sure you specify the domain name you want to use for AD.
+#After the GUI install: 
+#(Just copy and paste the following lines on the Rocky terminal)
+
+cd /root/
+dnf -y install wget 
+wget https://raw.githubusercontent.com/fumatchu/RADS/main/DC-Installer.sh
+chmod 700 ./DC-Installer.sh
+/root/DC-Installer.sh
