--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 (R)ocky (A)ctive (D)irectory (S)cript Builder
 
+###############################################
+RADS IS NOT CURRENTLY SUPPORTED FOR Rocky 9.5 a RE-WORK is COMING
+###############################################
 A walk-through can also be seen here:
 https://youtu.be/daaX67Ovegk
 
