--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 (R)ocky (A)ctive (D)irectory (S)cript Builder
 
 ###############################################
-RADS IS NOT CURRENTLY SUPPORTED FOR Rocky 9.5 a RE-WORK is COMING
+RADS is SUPPORTED FOR 9.5 ON A FRESH INSTALL- AN UPGRADE IS NOT CURRENTLY SUPPORTED AND A RE-WORK IS COMING TO FIX IT
 ###############################################
 A walk-through can also be seen here:
 https://youtu.be/daaX67Ovegk
