--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 ###############################################
 RADS is NOW FULLY SUPPORTED ON 9.5 and 9.6 for a fresh install and also upgrades from previous versions of Samba
-10 has not been tested yet-YMMV
+Version 10 support is currently BETA
 ###############################################
 A walk-through can also be seen here:
 https://youtu.be/daaX67Ovegk
