--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 ###############################################
 RADS is NOW FULLY SUPPORTED ON 9.5 and 9.6 for a fresh install and also upgrades from previous versions of Samba
-Version 10 support is currently UNSUPPORTED
+Version 10 support is currently UNSUPPORTED (for now)
 ###############################################
 A walk-through can also be seen here:
 https://youtu.be/daaX67Ovegk
